--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
 </head>
 
 <body>
-  <!-- @exstend -->
+  <!-- @exstend плейсхолдер-->
   <button class="button">кнопка</button>
   <button class="button-succsess">успіх</button>
   <button class="button-error">помилка</button>
 
+  <!-- @mixin -->
+  <header class="header"></header>
+  <section class="section"></section>
+  <button class="btn">Click me</button>
 </body>
 
 </html>
